# go-operator-bazel

./: .gitignore  MODULE.bazel  Makefile  PROJECT  README.md  go.mod
api/v1/: BUILD.bazel  groupversion_info.go
cmd/: BUILD.bazel  main.go
config/crd/bases/: cache.example.com_memcacheds.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/manifests/: kustomization.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  memcached_editor_role.yaml  memcached_viewer_role.yaml  role_binding.yaml  service_account.yaml
config/samples/: cache_v1_memcached.yaml
internal/controller/: BUILD.bazel  memcached_controller.go  memcached_controller_test.go  suite_test.go
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: BUILD.bazel
